# Dataframe-Lib

./: CMakeLists.txt  Makefile  README.md
include/dataframelib/: dataframelib.h  eager_dataframe.h  expr.h  kernel.h  lazy_dataframe.h  logical_plan.h  query_optimizer.h
src/: eager_dataframe.cpp  expr.cpp  kernel.cpp  lazy_dataframe.cpp  logical_plan.cpp  query_optimizer.cpp
